vm/42sh_tester/public/error_logs/42sh_90
42sh:1:1: [1m[91merror[0m: unexpected end of file
  1  |  {
     |  [1m[91m^[0m
